--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,8 +21,10 @@ composeNavigation = "2.8.0-beta03"
 serialization = "1.6.3"
 googleServices = "4.4.2"
 composeAnimation = "1.7.0-beta06"
+retrofit2 = "2.9.0"
 
 [libraries]
+
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -53,7 +55,7 @@ hilt-navigation = { module = "androidx.hilt:hilt-navigation-compose", version.re
 navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "composeNavigation" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization"}
 google-services = { group = "com.google.gms", name = "google-services", version.ref = "googleServices" }
-
+retrofit = {group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit2"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
