--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ serialization = "1.6.3"
 googleServices = "4.4.2"
 composeAnimation = "1.7.0-beta06"
 retrofit2 = "2.9.0"
+moshi = "2.9.0"
 
 [libraries]
 
@@ -53,6 +54,7 @@ navigation-compose = { module = "androidx.navigation:navigation-compose", versio
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization"}
 google-services = { group = "com.google.gms", name = "google-services", version.ref = "googleServices" }
 retrofit = {group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit2"}
+moshi = {group = "com.squareup.retrofit2", name = "converter-moshi", version.ref = "moshi"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
