--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,17 +11,20 @@ composeBom = "2024.04.01"
 
 compilerVersion = "2.52"
 kspVersion = "2.1.0-1.0.29"
-hiltVersion = "2.52"
 
+hiltVersion = "2.52"
 lifecycleViewmodelCompose = "2.8.2"
 hiltNavigation = "1.2.0"
-
 composeNavigation = "2.8.0-beta03"
+
 serialization = "1.6.3"
 googleServices = "4.4.2"
 composeAnimation = "1.7.0-beta06"
 retrofit2 = "2.9.0"
 moshi = "2.9.0"
+room = "2.6.1"
+coil = "2.5.0"
+databindingAdapters = "8.7.3"
 
 [libraries]
 
@@ -44,23 +47,30 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
-
 hilt-android = { group = "com.google.dagger", name = "hilt-android" , version.ref = "hiltVersion"}
-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler" , version.ref = "compilerVersion"}
-
+hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler" , version.ref = "hiltVersion"}
 hilt-navigation = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigation"}
-
 navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "composeNavigation" }
+
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization"}
 google-services = { group = "com.google.gms", name = "google-services", version.ref = "googleServices" }
 retrofit = {group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit2"}
 moshi = {group = "com.squareup.retrofit2", name = "converter-moshi", version.ref = "moshi"}
+retrofit-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit2" }
+
+# Room dependencies
+room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
+
+# Coil dependency
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
+androidx-databinding-adapters = { group = "androidx.databinding", name = "databinding-adapters", version.ref = "databindingAdapters" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
 
 kotlinAndroidKsp = { id = "com.google.devtools.ksp", version.ref ="kspVersion" }
 hiltAndroid = { id = "com.google.dagger.hilt.android", version.ref ="compilerVersion" }
