--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,10 @@ moshi = "2.9.0"
 room = "2.6.1"
 coil = "2.5.0"
 databindingAdapters = "8.7.3"
+lottie = "6.1.0"
+
+splashscreen = "1.0.1"
+
 
 [libraries]
 
@@ -66,6 +70,12 @@ room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 # Coil dependency
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 androidx-databinding-adapters = { group = "androidx.databinding", name = "databinding-adapters", version.ref = "databindingAdapters" }
+
+
+lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottie" }
+core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "splashscreen" }
+
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
